@@ -388,6 +388,12 @@ max-width: 1200px;
 }
 
 
+.max_full_width_wrapper {
+position: relative;
+max-width: 100%;
+}
+
+
 .full_width_wrapper {
 position: relative;
 width: 100%;
